# rpgCampaignManager

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.MD  babel.config.js  dev-install.bat  dev-install.sh  format.bat  format.sh  install.bat  install.sh  jest.config.js  manager.bat  manager.sh  manager_config.json  pyproject.toml  requirements.txt  rpgcampaign_manager.py  rpgcm_datastore.db
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: frontend-ci.yml
docs/: coverage-badge.md  rpgCampaignManager_TODO.md
docs/architecture/: UI_layout.txt  architecture_overview.md  build_dependencies.md  component_high_level_flow.txt  project layout.md  project_layout.md  storage_layer.txt  ui_file_structure.txt  wireframe.html
docs/docs/: coverage-badge.md
docs/gpt_devlog/: 00_MASTER_Developer_Log.md
src/: App.css  App.js  Sidebar.js  drive_sync.py  gpt_hook.py  package.json
src/backend/: api_character_routes.py  api_combat_routes.py  api_command_routes.py  api_config_routes.py  api_datastore_routes.py  api_display_routes.py  api_drive_routes.py  api_gpt_routes.py  api_localstore_routes.py  api_oauth_routes.py  api_obs_routes.py  api_security_routes.py  api_service.py  beastiary  controller.py  controller_auth.py  controller_characters.py  controller_combat.py  controller_command.py  controller_configuration.py  controller_datastore.py  controller_drive.py  controller_gpt.py  controller_help.py  controller_initiative.py  controller_localstore.py  controller_obs.py  controller_security.py  controller_show.py  datahandler.py  datahandler_characters.py  datahandler_combat.py  datahandler_config.py  datahandler_display.py  drive_sync.py  file_browser.py  gpt_proxy.py  utility_drivesyc.py  (+3 more)
(+75 files in other folders)
