[project]
name = "campaign-manager"
version = "0.1.0"
description = "AI-powered tabletop RPG campaign manager with GPT and Drive integration"
readme = "README.md"
authors = [
    { name="Kyle Scott", email="kylescott@rawintelligence.org" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "fastapi",
    "uvicorn",
    "openai",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "watchdog",
    "python-dotenv",
    "playwright"
]

[tool.setuptools]
packages = ["src.backend"]

[tool.pytest.ini_options]
testpaths = ["src/backend/tests"]
